@@ -519,7 +519,7 @@ Also used by (minor-)outline-mode "
   :group 'python)
 
 (defcustom py-shell-name "python"
-  "A default value `py-shell' may look for, if no shell is specified by command. "
+  "A PATH/TO/EXECUTABLE or default value `py-shell' may look for, if no shell is specified by command. "
   :type 'string
   :group 'python)
 (make-variable-buffer-local 'py-shell-name)
